fix(notice text): adds styles to allow the text to wrap on carriage returns & long words

--- a/freedam-web-notices/public/css/freedam-web-notices-public.css
+++ b/freedam-web-notices/public/css/freedam-web-notices-public.css
@@ -16,6 +16,11 @@ freedam-web-notices-container ul.freedam-web-notices {
   justify-content: center;
 }
 
+freedam-web-notices-container .tributeText {
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+}
+
 freedam-web-notices-container li.freedam-web-notice {
   flex: 0 1 auto;
   margin: 0;
